temp/objects/Job_Advertisement__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAX_Salary__c</fullName>
        <formula>IF(CONTAINS(TEXT(Salary__c),&quot;+&quot;),
    VALUE(&quot;9999999999999999&quot;),
    VALUE(TRIM(LEFT(MAX_Salary_helper__c, FIND(&quot;K&quot;, MAX_Salary_helper__c)-1))+&quot;000&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MAX Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAX_Salary_helper__c</fullName>
        <formula>MID(
    TEXT(Salary__c),
    FIND(&quot;-&quot;, TEXT(Salary__c))+1,
    LEN(TEXT(Salary__c))-FIND(&quot;-&quot;, TEXT(Salary__c))
    )</formula>
        <label>MAX Salary helper</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIN_Salary__c</fullName>
        <formula>VALUE(TRIM(LEFT(TEXT(Salary__c), FIND(&quot;K&quot;, TEXT(Salary__c))-1))+&quot;000&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MIN Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <label>Manager Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Position_ID__c</fullName>
        <externalId>true</externalId>
        <label>Position ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Published_Date__c</fullName>
        <formula>TEXT(MONTH(DATEVALUE(  CreatedDate  )))+&quot;/&quot; +TEXT(DAY(DATEVALUE(  CreatedDate  )))+&quot;/&quot; +TEXT(YEAR(DATEVALUE(  CreatedDate  )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Published Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>50K-75K</fullName>
                </value>
                <value>
                    <fullName>75K-90K</fullName>
                </value>
                <value>
                    <fullName>90K-120K</fullName>
                </value>
                <value>
                    <fullName>120K+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <label>Skills Required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>On hold</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temporary_Status__c</fullName>
        <label>Temporary Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>On hold</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Job Advertisement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Job Advertisement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Advertisements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>